--- a/src/pages/Home/components/DesignLanguage/index.module.scss
+++ b/src/pages/Home/components/DesignLanguage/index.module.scss
@@ -36,7 +36,7 @@
   width: 525px;
   font-size: 16px;
   margin-top: 24px;
-  text-align: center;
+  text-align: left;
   line-height: 1.5;
 }
 .featureListWrapper {
