--- a/src/pages/Home/components/Materials/index.module.scss
+++ b/src/pages/Home/components/Materials/index.module.scss
@@ -34,7 +34,7 @@
 .desc {
   font-size: 16px;
   margin-top: 34px;
-  text-align: center;
+  text-align: left;
   line-height: 1.5;
 }
 .extraButton {
