调整模块名称，细节调整

--- a/src/pages/Home/components/LandingIntroBanner/index.module.scss
+++ b/src/pages/Home/components/LandingIntroBanner/index.module.scss
@@ -5,6 +5,8 @@
   line-height: 60px;
   margin-bottom: 30px;
   letter-spacing: 4px;
+  //background:rgba(161, 195, 233,0.7);
+  //background:rgba(27, 132, 264,0.5);
 }
 .subTitle {
   color: #fff;
