--- a/src/pages/Home/components/iot/index.module.scss
+++ b/src/pages/Home/components/iot/index.module.scss
@@ -52,5 +52,5 @@
   bottom: 0;
   position: absolute;
   clip-path: polygon(0 15%, 100% 0, 100% 85%, 0% 100%);
-  background: #FAFAFA;
+  background: #fff;
 }
