--- a/src/pages/Home/components/nature/index.module.scss
+++ b/src/pages/Home/components/nature/index.module.scss
@@ -67,7 +67,7 @@
   bottom: 0;
   position: absolute;
   background-size: cover;
-  background-image: url('./images/TB18Na6iHSYBuNjSspiXXXNzpXa-3800-2026.jpg');
+  background-image: url('./images/nature_back.png');
   background-repeat: no-repeat;
   background-position: center;
 }
